# Calcular-FInanciamento-Imobiliario

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.MD  ARCHITECTURE.md  CHANGELOG.MD  CLAUDE.md  CONTRIBUTING.md  DECISIONS.MD  Dockerfile  README.MD  ROADMAP.md  SPEC.MD  TASKS.md  compose.yaml  dashboard.py  extrato.csv  extrator2.py  main.py  pyproject.toml
docs/: index.md
docs/arquitetura/: arquitetura.md  decisoes.md
docs/desenvolvimento/: docker.md  tarefas.md
docs/produto/: roadmap.md  spec.md
modelos/: __init__.py  amortizacao.py  calibracao.py  comparacao.py  evento_historico.py  planejamento.py  projecao.py  relatorio.py
simulador/: __init__.py  amortizacao.py  analise.py  calculos.py  calibracao.py  comparacao.py  entrada.py  excecoes.py  exportacao.py  extrator_pdf.py  graficos.py  leitor.py  logging.py  parcelas.py  planejamento.py  projecao.py  reconstrucao.py  relatorio.py
testes/: conftest.py  test_amortizacao.py  test_analise.py  test_calibracao.py  test_cli.py  test_comparacao.py  test_dashboard.py  test_entrada.py  test_extrator_pdf.py  test_graficos.py  test_leitor.py  test_logging.py  test_parcelas.py  test_planejamento.py  test_projecao.py  test_reconstrucao.py  test_relatorio.py
