[project]
name = "calcular-financiamento-apartamento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.2",
    "camelot-py>=2.0.0",
    "fastapi>=0.139.2",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "plotly>=6.9.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-dateutil>=2.9.0.post0",
    "rich>=15.0.0",
    "scipy>=1.18.0",
    "streamlit>=1.59.2",
    "tabula-py>=2.10.0",
    "typer>=0.27.0",
    "uvicorn>=0.51.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.22",
]
