[project]
name = "calcular-financiamento-apartamento"
version = "1.3.0"
description = "Simulador de financiamento imobiliário do Banco do Brasil"
readme = "README.MD"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.1",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "streamlit>=1.59.2",
    "typer>=0.27.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.3.0",
    "pandas-stubs",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["testes"]
pythonpath = ["."]
addopts = "--cov=."

[tool.ruff]
target-version = "py313"

[tool.black]
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
exclude = "(^|/)extrator2\\.py$"

[tool.coverage.report]
fail_under = 90
